# sentry-tauri

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  build.rs  package.json  pnpm-lock.yaml  rustfmt.toml
examples/basic-app/: package-lock.json  package.json
examples/basic-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/basic-app/src-tauri/.cargo/: config.toml
examples/basic-app/src-tauri/capabilities/: main.json
examples/basic-app/src-tauri/src/: lib.rs  main.rs
examples/vite-app/: index.html  package.json
examples/vite-app/src/: main.ts
examples/vite-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/vite-app/src-tauri/src/: main.rs
js/: index.ts  inject.ts  rollup.config.js  rollup.config.mjs  tsconfig.json
permissions/: breadcrumb.toml  default.toml  envelope.toml  event.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: breadcrumb.toml  event.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  options.rs  plugin.rs
webview-dist/: index.d.ts  index.js  index.min.js  index.mjs  inject.d.ts  inject.js  inject.min.js
webview-src/: index.ts  inject.ts  integration.ts  rollup.config.js  tsconfig.json
