[package]
description = "An experimental Tauri Plugin for Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tauri-plugin-sentry"
readme = "README.md"
repository = "https://github.com/timfish/sentry-tauri"
version = "0.5.0"
links = "tauri-plugin-sentry"
exclude = ["/examples", "/node_modules", "/target"]

[features]
default = ["minidump"]
minidump = ["sentry-rust-minidump"]

[dependencies]
base64 = "0.22"
sentry = { version = "0.42", default-features = false }
serde = "1"
tauri = "2"
thiserror = "2"
schemars = "0.8"

[target.'cfg(not(target_os = "ios"))'.dependencies]
sentry-rust-minidump = { version = "0.13", optional = true }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
