[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sadness-generator = "0.6"
tauri-plugin-sentry = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]
